--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.3.3",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^2.6.0",
+    "vue-star-rating": "^1.6.1",
     "vue-test-utils": "^1.0.0-beta.11",
     "vuetable": "^1.5.12",
     "vuex": "^2.3.1"
